--- a/package.json
+++ b/package.json
@@ -6,5 +6,11 @@
     "node-telegram-bot-api": "^0.66.0",
     "technicalindicators": "^3.1.0",
     "ws": "^8.18.3"
+  },
+  "type": "module",
+    "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "node --watch index.js"
   }
 }
