--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "node --watch index.js"
+    "dev": "node --watch index.js",
+    "test": "node backtest/runSignalAnalysis.js"
   }
 }
