--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dotenv": "^17.2.3",
     "node-telegram-bot-api": "^0.66.0",
     "technicalindicators": "^3.1.0",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2"
   },
   "type": "module",
     "main": "index.js",
